make padding a bit smaller on smaller device to avoid words break

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 }
 
 .section-container {
-  @apply mx-auto px-8 max-w-7xl pb-20;
+  @apply mx-auto px-5 sm:px-8 max-w-7xl pb-20;
 }
 
 .centering {
